--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "clubs",
   "version": "0.11.0",
-  "private": true,
   "workspaces": [
     "packages/*"
   ],
@@ -10,7 +9,8 @@
     "lint:eslint": "eslint --fix '**/*.{js,mjs,cjs}'",
     "lint:prettier": "prettier -w --ignore-path .astro.prettierignore --no-error-on-unmatched-pattern .",
     "lint:prettier:astro": "yarn prettier -w **/*.astro || echo '🙈 > ignored some errors of prettier for astro'",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "buildCli": "tsc -p ./packages/cli"
   },
   "bin": {
     "clubs": "./packages/cli/lib/index.js"
@@ -35,7 +35,12 @@
     "remark-cli": "10.0.1",
     "sass": "1.52.3",
     "type-fest": "2.13.0",
-    "typescript": "4.7.3"
+    "@types/fs-extra": "^9.0.13",
+    "@types/inquirer": "^8.2.1",
+    "@types/node": "^17.0.42",
+    "@types/yargs": "^17.0.10",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "dependencies": {
     "astro": "1.0.0-beta.42",
@@ -43,7 +48,14 @@
     "ethers": "5.6.8",
     "ramda": "0.28.0",
     "rxjs": "7.5.5",
-    "vue": "3.2.37"
+    "vue": "3.2.37",
+    "chalk": "4.1.2",
+    "debug": "^4.3.4",
+    "findup": "^0.1.5",
+    "fs-extra": "^10.1.0",
+    "inquirer": "^8.2.4",
+    "path": "^0.12.7",
+    "yargs": "^17.5.1"
   },
   "repository": "https://github.com/dev-protocol/clubs.git",
   "author": "",
